o arquivo ipynb será de teste e o py será o final

--- a/primeiras_visualizacoes/visualizando2.ipynb
+++ b/primeiras_visualizacoes/visualizando2.ipynb
@@ -1594,6 +1594,13 @@
          "showcountries": true,
          "visible": false
         },
+        "margin": {
+         "b": 35,
+         "l": 35,
+         "pad": 35,
+         "r": 35,
+         "t": 35
+        },
         "template": {
          "data": {
           "bar": [
@@ -2412,7 +2419,8 @@
         },
         "title": {
          "text": "Inflação na Europa em 1995"
-        }
+        },
+        "width": 550
        }
       }
      },
@@ -2439,7 +2447,8 @@
     ")\n",
     "fig.update_layout(\n",
     "    title = \"Inflação na Europa em 1995\",\n",
-    "    #margin={\"r\": 0, \"t\": 0, \"l\": 0, \"b\": 0}\n",
+    "    margin={\"r\": 35, \"t\": 35, \"l\": 35, \"b\": 35, \"pad\": 35},\n",
+    "    width = 550\n",
     "    )\n",
     "fig.show()"
    ]
@@ -2472,39 +2481,39 @@
          "colorscale": [
           [
            0,
-           "rgb(255,245,240)"
+           "rgb(247,251,255)"
           ],
           [
            0.125,
-           "rgb(254,224,210)"
+           "rgb(222,235,247)"
           ],
           [
            0.25,
-           "rgb(252,187,161)"
+           "rgb(198,219,239)"
           ],
           [
            0.375,
-           "rgb(252,146,114)"
+           "rgb(158,202,225)"
           ],
           [
            0.5,
-           "rgb(251,106,74)"
+           "rgb(107,174,214)"
           ],
           [
            0.625,
-           "rgb(239,59,44)"
+           "rgb(66,146,198)"
           ],
           [
            0.75,
-           "rgb(203,24,29)"
+           "rgb(33,113,181)"
           ],
           [
            0.875,
-           "rgb(165,15,21)"
+           "rgb(8,81,156)"
           ],
           [
            1,
-           "rgb(103,0,13)"
+           "rgb(8,48,107)"
           ]
          ],
          "hoverinfo": "text",
@@ -3801,6 +3810,13 @@
          "showcountries": true,
          "visible": false
         },
+        "margin": {
+         "b": 35,
+         "l": 35,
+         "pad": 35,
+         "r": 35,
+         "t": 35
+        },
         "template": {
          "data": {
           "bar": [
@@ -4619,7 +4635,8 @@
         },
         "title": {
          "text": "Expectativa de Vida na Europa em 1995"
-        }
+        },
+        "width": 550
        }
       }
      },
@@ -4632,7 +4649,7 @@
     "                                    z = np.log10(paises['1995'].loc[paises['Series Name']=='life_expectancy']),\n",
     "                                    hoverinfo = 'text',\n",
     "                                    text= paises['1995'].loc[paises['Series Name']=='life_expectancy'],\n",
-    "                                    colorscale='Reds',\n",
+    "                                    colorscale='blues',\n",
     "                                    colorbar=dict(\n",
     "                                        title='Inflação',\n",
     "                                        dtick = [200, 400, 600, 800],\n",
@@ -4646,8 +4663,9 @@
     "    showcountries=True, countrycolor=\"Black\"\n",
     ")\n",
     "fig1.update_layout(\n",
-    "    title = \"Expectativa de Vida na Europa em 1995\"\n",
-    "    #margin={\"r\": 0, \"t\": 0, \"l\": 0, \"b\": 0}\n",
+    "    title = \"Expectativa de Vida na Europa em 1995\",\n",
+    "    margin={\"r\": 35, \"t\": 35, \"l\": 35, \"b\": 35, \"pad\": 35},\n",
+    "    width = 550\n",
     "    )\n",
     "fig1.show()"
    ]
@@ -4682,6 +4700,51 @@
     "    dcc.Graph(figure=fig1)\n",
     "    ]\n",
     ")\n",
+    "\n",
+    "if __name__ == \"__main__\":\n",
+    "    app.run_server(debug=True, port=8051, use_reloader=False)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    " - https://www.youtube.com/watch?v=UYH_dNSX1DM\n",
+    " - https://github.com/Coding-with-Adam/Dash-by-Plotly/blob/master/Dash%20Components/Dropdown/dropdown.py"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Dash app running on http://127.0.0.1:8051/\n"
+     ]
+    },
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mThe Kernel crashed while executing code in the the current cell or a previous cell. Please review the code in the cell(s) to identify a possible cause of the failure. Click <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. View Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
+     ]
+    }
+   ],
+   "source": [
+    "app = JupyterDash(__name__)\n",
+    "app.layout = html.Div(className='row', children=[\n",
+    "    html.H1(\"Tips database analysis (First dashboard)\"),\n",
+    "    dcc.Dropdown(),\n",
+    "    html.Div(children=[\n",
+    "        dcc.Graph(id=\"graph1\", figure= fig, style={'display': 'inline-block'}),\n",
+    "        dcc.Graph(id=\"graph2\", figure=fig1, style={'display': 'inline-block'})\n",
+    "    ])\n",
+    "])\n",
     "\n",
     "if __name__ == \"__main__\":\n",
     "    app.run_server(debug=True, port=8051, use_reloader=False)"
