Subindo arquivo de variaveis corrigido

--- a/projeto final/criando_html_dash2.ipynb
+++ b/projeto final/criando_html_dash2.ipynb
@@ -1,6 +1,7 @@
 {
  "cells": [
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "520fe79a-cf57-4e98-8d21-a12274427960",
    "metadata": {},
@@ -34,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 213,
+   "execution_count": 1,
    "id": "c0dce2d5-f67d-488a-b8be-4746e4d61e9d",
    "metadata": {},
    "outputs": [],
@@ -61,16 +62,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 21,
    "id": "fd7d6b25-5d78-4748-b1da-3f78f4a24b48",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df1 = pd.read_csv(\"variaveis_totais.csv\")\n",
+    "df1 = pd.read_csv(\"variaveis_totais - Copia.csv\", sep=';')\n",
     "df2 = pd.read_excel(\"eventos_totais.xlsx\")"
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "dc204fdd-4b57-4fbd-992f-19667d4cc82e",
    "metadata": {},
@@ -80,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 22,
    "id": "2731ea24-cca3-4128-983c-5bf27112c73a",
    "metadata": {},
    "outputs": [
@@ -105,7 +107,7 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>Unnamed: 0</th>\n",
+       "      <th>Column1</th>\n",
        "      <th>country</th>\n",
        "      <th>country_code</th>\n",
        "      <th>indicator</th>\n",
@@ -170,15 +172,15 @@
        "</div>"
       ],
       "text/plain": [
-       "   Unnamed: 0  country country_code   indicator  indicator_user  year  value\n",
-       "0           0  Albania          ALB  gdp_growth  GDP Growth (%)  1960    NaN\n",
-       "1           1  Albania          ALB  gdp_growth  GDP Growth (%)  1961    NaN\n",
-       "2           2  Albania          ALB  gdp_growth  GDP Growth (%)  1962    NaN\n",
-       "3           3  Albania          ALB  gdp_growth  GDP Growth (%)  1963    NaN\n",
-       "4           4  Albania          ALB  gdp_growth  GDP Growth (%)  1964    NaN"
+       "   Column1  country country_code   indicator  indicator_user  year  value\n",
+       "0        0  Albania          ALB  gdp_growth  GDP Growth (%)  1960    NaN\n",
+       "1        1  Albania          ALB  gdp_growth  GDP Growth (%)  1961    NaN\n",
+       "2        2  Albania          ALB  gdp_growth  GDP Growth (%)  1962    NaN\n",
+       "3        3  Albania          ALB  gdp_growth  GDP Growth (%)  1963    NaN\n",
+       "4        4  Albania          ALB  gdp_growth  GDP Growth (%)  1964    NaN"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -189,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 23,
    "id": "5b4217b5-f3a8-497d-b659-4746234ca3ba",
    "metadata": {},
    "outputs": [],
@@ -199,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 24,
    "id": "76e0b638-c2ae-4781-9159-7f201cdcbe53",
    "metadata": {},
    "outputs": [],
@@ -210,6 +212,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "8f918a57-a73a-4ebe-8ab6-904ef9516052",
    "metadata": {},
@@ -219,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 25,
    "id": "cb99fc0a-fdf9-4ef2-aadc-d44d9b7b2119",
    "metadata": {},
    "outputs": [],
@@ -229,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 26,
    "id": "1af50386-01b5-4707-83ac-001cf3986f3d",
    "metadata": {},
    "outputs": [],
@@ -239,7 +242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 27,
    "id": "4ddc9526-a9e5-4d3c-883a-aaec270c102a",
    "metadata": {},
    "outputs": [
@@ -326,7 +329,7 @@
        "85  Pirin Macedonia was declared by Zhivkov as a p...  "
       ]
      },
-     "execution_count": 8,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -337,7 +340,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 28,
    "id": "b6fe0850-5d42-493b-88b6-10a688b7ea7c",
    "metadata": {},
    "outputs": [],
@@ -380,6 +383,7 @@
    "source": []
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "0c8e39da-472c-4e8c-810f-3424bca464bb",
    "metadata": {},
@@ -1496,6 +1500,7 @@
    "source": []
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "8cad6b42-bec6-42f7-8b5c-7a94dad0201f",
    "metadata": {},
@@ -1505,7 +1510,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 254,
+   "execution_count": 32,
    "id": "727755a8-c0a3-44ad-9703-63774f424e00",
    "metadata": {},
    "outputs": [],
@@ -1515,7 +1520,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 255,
+   "execution_count": 30,
    "id": "cdf5881d-953c-4c6a-97aa-dc5e29defd64",
    "metadata": {},
    "outputs": [],
@@ -1525,7 +1530,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 256,
+   "execution_count": 31,
    "id": "3f290be5-0ac6-477f-8265-afe91959d9c4",
    "metadata": {
     "tags": []
@@ -3061,7 +3066,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.9.13"
   }
  },
  "nbformat": 4,
